# rivetDB

./: .gitignore  Cargo.toml  Dockerfile  TESTING.md  build_errors.txt  build_log.txt  build_output.txt  mainv1.rs  render.yaml  rivetdb.toml  rivetdb_context.txt  test_output.txt
.github/workflows/: ci.yml
demo/trackmania/: .gitignore  forwarder.js  forwarder.mjs  package-lock.json  package.json  server.js
demo/whiteboard/: README.md  server.py  whiteboard.html
demo/whiteboard-react/: .gitignore  Dockerfile  package-lock.json  package.json  server.js
docs/: CONFIGURATION.md  phase1.1-complete.md  phase1.2-complete.md
important documents/: imp commands.txt
paper/: Tectonic.toml  diagrams_guide.md  main.tex  package.json  rivetdb_paper.tex  rivetdb_paper2.tex  rivetdb_report.tex  test.tex
paper/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex
scripts/: benchmark.ps1  demo.ps1
src/: config.rs  lib.rs  main.rs  metrics.rs
src/commands/: admin.rs  auth.rs  basic.rs  bloom.rs  expiry.rs  generic.rs  hash.rs  json.rs  list.rs  mod.rs  namespace.rs  query.rs  schema.rs  set.rs  string.rs  timeseries.rs  zset.rs
src/persistence/: aof.rs  async_aof.rs  mod.rs
src/protocol/: frame.rs  mod.rs  reply.rs
src/query/: executor.rs  mod.rs
src/schema/: mod.rs  validator.rs
src/storage/: bloom.rs  eviction.rs  mod.rs  namespace.rs  state.rs  timeseries.rs  value.rs  zset.rs
src/utils/: io.rs
tests/: integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/unit/: mod.rs
(+15 files in other folders)
